web-client/app/styles/main.scss
/* ... */
* html .clearfix {
  height: 1%;
}

.logo {
  position: absolute;
  right: 0;
  text-align: left;
  z-index: 999;
  top: 22px;
  transition: all 0.4s;
  padding: 6px 0;
  a {
    color: #000;
    font-size: 14px;
  }
  p {
    font-size: 11px;
  }
  img {
    display: inline;
    width: 21px;
  }
  span {
    display: none;
    vertical-align: top;
    margin-right: -4px;
    font-size: 0.8em;
    font-size: 14px;
  }
  &.push-right {
    margin-right: -500px;
  }
}

.pull-right {
  float: right;
}

.row .left-column {
  float: left;
  padding: 0 15px;
}

.content-wrapper,
.row .left-column {
  border-right: 1px solid #f4f4f4;
  width: 601px;
  padding-left: 36px;
}

.content-wrapper {
  float: left;
  min-height: 100vh;
  transition: all 0.4s;
  &.category-page {
    @media (min-width: 720px) and (max-width: 900px) {
      padding-left: 100px;
    }
  }
}

h1, h2, h3 {
  font-weight: normal;
}
.article {
  padding: 0 15px;
  margin-bottom: 60px;
  border-right: 1px solid;
  right: -1px;
  position: relative;
  /* from 720 to 900px width >> padding-left: 100px; in category page */
  a {
   color: #000;
  }
  .title {
    margin: 24px 0;
    h2 {
      font-size: 1.2em;
    }
    h3 {
      color: #777;
      font-size: 1em;
    }
  }
}

.stats-container {
  .article {
    .title {
      margin: 3px 0;
    }

    h2 {
      font-size: 18px;
      color: #555;
    }
  }
}

.article-stats {
  p {
    min-width: 70px;
    float: right;
    direction: ltr;
    text-align: right;
    padding-left: 1em;
    font-size: 12px;
    color: #777;

    &.view-count i {
      color: #2299DD;
    }

    &.read-count i {
      color: #ca1504;
    }

    &.comments-count i {
      color: #EFB018;
    }

    &.recommendations-count i {
      color: #008e94;
    }
  }
}

.meta-data {
  position: absolute;
  right: -130px;
  top: 52px;
  width: 130px; /* for larger than 767px and mobile 200px, from 700 to 1024 let it be 130px */
  text-align: left;
  padding-left: 15px;
}

.meta-data,
.category-topic,
.reading-time {
  font-size: 12px;
  color: #bbb;
}

.listing-types-tabs {
  /*padding: 0 15px;*/
  position: relative;
  top: 0;
  margin-bottom: 40px;
  z-index: 2;
  a {
    color: #b3b3b3;
    font-size: 16px;
    margin: 0 10px;
    &:hover, &.active {
      color: #ca1504;
    }
  }

  .tab-icon {
    display: none;

    &.active {
      display: inline-block;
    }
  }
}

.text-white {
  color: #fff;
}

.author-block img {
  width: 100%;
}

.category-block, .author-block {
  width: 98px;
  height: 98px;
  background: #ccc;
  margin-left: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  color: #fff;
  position: relative;
  p {
    padding: 0 5px;
    text-align: center;
  }
}

.publishers-page .author-block {
  width: 139px;
  height: 139px;
}

.block {
  float: right;
  a {
    display: block;
    width: 100%;
    height: 100%;
    color: #fff;
  }
}

.category-block {
  text-align: center;
  i {
    display: block;
    width: 26px;
    height: 26px;
    margin: 0 auto;
    position: relative;
    top: 0;
    transition: all 0.3s;
  }
  &:hover {
    cursor: pointer;
    i {
      font-size: 26px;
      top: -5px;
      text-shadow: 0px 0px 1px;
    }
  }
}

.category-content {
  padding-top: 32px;
}

.author-block {
  p {
    position: absolute;
    right: 0;
    bottom: 10px;
    width: 100%;
  }
  span {
    position: absolute;
    left: 10px;
    top: 10px;
  }
  &.small-block {
    .author-name {
      height: 22px;
      overflow: hidden;
    }
  }
  &.selected {
    .author-name {
      display: none;
    }
  }
}

.publishers-page {
  .dimmer {
    background: rgba(0,0,0,0.4);
    &:hover {
      background: rgba(0,0,0,0);
    }
  }
}

.dimmer {
  position:absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.7);
}

.section {
  padding-bottom: 40px;
}

.profile-wrapper {
  .profile-info {

    margin: 6px 0 20px 40px;
    padding: 0 15px;

    p {
      color: #777;
      font-size: 14px;
    }
    h3 {
      color: #000;
    }
    &.section-title {
      padding: 0;
    }
  }
}


.section-title {
  color: #b3b3b3;
  font-size: 16px;
  margin: 16px 0;
  position: relative;
  right: -13px;

  &.text-small {
    font-size: 12px;
  }

  &.section-subtitle {
    font-size: 0.8em;

    i {
      width: 16px;
      height: 16px;
      font-size: 0.8em;
      line-height: 2;
      margin-right: 5px;
      margin-left: 2em;
    }
  }

  &.clear-right {
    right: 0;
  }

  .action-text {
    font-size: 11px;
    color: #000;
  }

  i {
    display: inline-block;
    width: 25px;
    height: 25px;
    vertical-align: middle;
    background-color: #ca1504;
    border-radius: 50%;
    margin-left: 10px;
    position: relative;
    top: 2px;
    &.fa-facebook {
      background-color: #49659F;
    }
  }

  div {
    display: inline-block;
  }

  .profile-info {
    margin: 6px 0 20px 40px;
    &.clear-padding {
      padding: 0;
    }
  }
}

.listing-types-tabs i {
  margin-left: 0;
}

.authors-page {
  .carousel {
    white-space: nowrap;
    overflow-x: scroll;
  }

  .author-block {
    width: 148px;
    height: 148px;
    overflow: hidden;
    float: none;
    display: inline-block;
    position: relative;

    &.selected:after {
      content: "";
      position: absolute;
      width: 0;
      height: 0;
      border-width: 10px;
      border-style: solid;
      border-color: transparent transparent #fff transparent;
      bottom: 0px;
      left: 45%;
    }
    .social-icons {
      bottom: -24px;
    }

    &.hovered {
      p {
        bottom: 34px;
      }
      .social-icons {
        bottom: 10px;
      }
    }
  }
}

.article-page .logo p {
  color: #ddd;
}

.single-article {
  &.legacy-article {
    padding: 2em 1em;
    text-align: justify;
    position: relative;

    blockquote {
      margin-right: -16px;
    }

    .content-wrapper {
      min-height: 1px;
      padding: 0 15px;
    }
  }
}
/* ... */

